<resources>

    <string name="app_name">Labo 2</string>

    <string name="main_base_title">Données de base</string>
    <string name="main_base_name_title">Nom</string>
    <string name="main_base_firstname_title">Prénom</string>
    <string name="main_base_birthdate_title">Date de naissance</string>
    <string name="main_base_birthdate_dialog_title">Sélectionnez votre date de naissance</string>
    <string name="main_base_nationality_title">Nationalité</string>
    <string name="main_base_occupation_title">Occupation</string>
    <string name="main_base_occupation_student">Etudiant</string>
    <string name="main_base_occupation_worker">Employé</string>

    <string-array translatable="false" name="nationalities">
        <item>@string/nationality_empty</item>
        <item>@string/ch</item>
        <item>@string/fr</item>
        <item>@string/de</item>
        <item>@string/it</item>
    </string-array>

    <string name="nationality_empty">Sélectionner</string>
    <string name="ch">Suisse</string>
    <string name="fr">Française</string>
    <string name="de">Allemande</string>
    <string name="it">Italienne</string>
    <!-- ... -->

    <string name="main_specific_students_title">Données spécifiques (étudiants)</string>
    <string name="main_specific_school_title">Ecole/Université</string>
    <string name="main_specific_school_input">EPFL-VD</string>
    <string name="main_specific_graduationyear_title">Année du diplôme</string>
    <string name="main_specific_graduationyear_input">5700 B.C</string>

    <string name="main_specific_workers_title">Données spécifiques (employé)</string>
    <string name="main_specific_compagny_title">Entreprise</string>
    <string name="main_specific_compagny_input">ACME Corp</string>
    <string name="main_specific_sector_title">Secteur</string>
    <string name="main_specific_experience_title">Expérience (années)</string>
    <string name="main_specific_experience_input">-12</string>

    <string name="sectors_empty">Sélectionner</string>
    <string-array name="sectors">
        <item>@string/sectors_empty</item>
        <item>@string/agriculture</item>
        <item>@string/art</item>
        <item>@string/construction</item>
        <item>@string/management</item>
        <item>@string/law</item>
        <item>@string/teaching</item>
        <item>@string/tourism</item>
        <item>@string/industrie</item>
        <item>@string/ic</item>
        <item>@string/humansciences</item>
        <item>@string/health</item>
        <item>@string/sciences</item>
        <item>@string/social</item>
        <item>@string/sport</item>
        <item>@string/logistic</item>
    </string-array>

    <!-- src: https://kitpedagogique.onisep.fr/forum-orientation/Decouvrir-les-secteurs-professionnels -->
    <string name="agriculture">Agriculture, Agroalimentaire, Environnement</string>
    <string name="art">Arts, Culture</string>
    <string name="construction">Bâtiment, Travaux publics</string>
    <string name="management">Commerce, Gestion, Économie, Management</string>
    <string name="law">Droit, Sciences politiques, Sécurité</string>
    <string name="teaching">Enseignement, Formation</string>
    <string name="tourism">Hôtellerie, Restauration, Tourisme</string>
    <string name="industrie">Industrie</string>
    <string name="ic">Information, communication</string>
    <string name="humansciences">Lettres, Langues, Sciences humaines</string>
    <string name="health">Santé</string>
    <string name="sciences">Sciences</string>
    <string name="social">Social</string>
    <string name="sport">Sport, Animation</string>
    <string name="logistic">Transports, Logistique</string>
    <string name="other">Autre</string>

    <string name="additional_title">Données complémentaires</string>
    <string name="additional_email_title">Adresse e-mail</string>
    <string name="additional_email_input">JeanClaude@VanDamme.xyz</string>
	
    <string name="additional_remarks_title">Commentaires</string>
    <string name="additional_remarks_input">I like trains.</string>

    <string name="btn_cancel">@android:string/cancel</string>
    <string name="btn_ok">@android:string/ok</string>
    <string name="cake">cake</string>

    <string name="input_lastname">Veuillez entrer votre nom</string>
    <string name="input_firstname">Veuillez entrer votre prénom</string>
    <string name="input_birthdate">Veuillez entrer votre date de naissance</string>
    <string name="input_nationnality">Veuillez sélectionner votre nationalité</string>
    <string name="input_email">Veuillez entrer votre adresse email</string>
    <string name="bad_email">L\'adresse email est invalide</string>
    <string name="input_university">Veuillez entrer le nom de votre université</string>
    <string name="input_graduation_year">Veuillez entrer l\'année du diplôme</string>
    <string name="bad_graduation_year">L\'année du diplôme est invalide</string>
    <string name="input_company">Veuillez entrer votre entreprise</string>
    <string name="input_sector">Veuillez sélectionner votre secteur</string>
    <string name="input_experience">Veuillez entrer votre nombre d\'années d\'expérience</string>
    <string name="bad_experience">Le nombre d\'années d\'expérience est invalide</string>
    <string name="input_occupation">Veuillez sélectionner votre occupation</string>
    <string name="data_added">Les données ont été ajoutées à la base de données !</string>

</resources>